# lyrics_to_genre

./: README.md  app.py  genre_model.joblib  main.py  pyproject.toml  tfidf_vectorizer.joblib
